--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,12 @@ x-spark-common: &spark-common
     - SPARK_RPC_ENCRYPTION_ENABLED=no
     - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
     - SPARK_SSL_ENABLED=no
+    # App Env
+    - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
+    - MINIO_ENDPOINT=http://minio:9000
+    - MINIO_ACCESS_KEY=minioadmin
+    - MINIO_SECRET_KEY=minioadmin
+    - MINIO_BUCKET_BRONZE=cryptolake-bronze
   volumes:
     - ./src:/opt/spark/work-dir/src
     - ./data:/opt/spark/data
@@ -59,26 +65,35 @@ services:
     entrypoint: >
       /bin/sh -c " mc alias set minio http://minio:9000 minioadmin minioadmin; mc mb --ignore-existing minio/cryptolake-bronze; mc mb --ignore-existing minio/cryptolake-silver; mc mb --ignore-existing minio/cryptolake-gold; exit 0; "
 
-  # --- Kafka (KRaft Mode) ---
+  # --- Zookeeper ---
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+
+  # --- Kafka (Zookeeper Mode) ---
   kafka:
     image: confluentinc/cp-kafka:7.4.0
     container_name: kafka
     ports:
       - "9092:9092"
+    depends_on:
+      - zookeeper
     environment:
-      KAFKA_NODE_ID: 1
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_LISTENERS: PLAINTEXT://kafka:29092,CONTROLLER://kafka:29093,PLAINTEXT_HOST://0.0.0.0:9092
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:29093
-      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      KAFKA_PROCESS_ROLES: broker,controller
-      KAFKA_LOG_DIRS: /tmp/kraft-combined-logs
       # Auto-create entry topics
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
     healthcheck:
@@ -86,6 +101,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    volumes:
+      - kafka_data:/var/lib/kafka/data
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
@@ -109,9 +126,14 @@ services:
       - CATALOG_WAREHOUSE=s3a://cryptolake-bronze/
       - CATALOG_IO__IMPL=org.apache.iceberg.aws.s3.S3FileIO
       - CATALOG_S3_ENDPOINT=http://minio:9000
-      - CATALOG_S3_ACCESS_KEY_ID=minioadmin
-      - CATALOG_S3_SECRET_ACCESS_KEY=minioadmin
+      - CATALOG_S3_ACCESS__KEY__ID=minioadmin
+      - CATALOG_S3_SECRET__ACCESS__KEY=minioadmin
+      - CATALOG_S3_PATH__STYLE__ACCESS=true
       - CATALOG_S3_PATH_STYLE_ACCESS=true
+      - AWS_S3_PATH_STYLE_ACCESS=true
+      - CATALOG_PROPERTIES=s3.path-style-access=true
+      - AWS_ACCESS_KEY_ID=minioadmin
+      - AWS_SECRET_ACCESS_KEY=minioadmin
       - AWS_REGION=us-east-1
     depends_on:
       minio:
@@ -126,12 +148,19 @@ services:
   spark-master:
     build: ./docker/spark
     container_name: spark-master
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master --ip spark-master --port 7077 --webui-port 8080
     environment:
       - SPARK_MODE=master
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
+      # App Env
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
+      - MINIO_ENDPOINT=http://minio:9000
+      - MINIO_ACCESS_KEY=minioadmin
+      - MINIO_SECRET_KEY=minioadmin
+      - MINIO_BUCKET_BRONZE=cryptolake-bronze
     ports:
       - "8082:8080" # Changed to 8082 to avoid conflict with Kafka UI
       - "7077:7077"
@@ -145,6 +174,7 @@ services:
 
   spark-worker:
     <<: *spark-common
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     depends_on:
       spark-master:
         condition: service_healthy
@@ -204,3 +234,4 @@ services:
 volumes:
   minio_data:
   postgres_data:
+  kafka_data:
