--- a/docker/spark/spark-defaults.conf
+++ b/docker/spark/spark-defaults.conf
@@ -4,9 +4,12 @@ spark.sql.catalog.spark_catalog.type   hive
 spark.sql.catalog.cryptolake           org.apache.iceberg.spark.SparkCatalog
 spark.sql.catalog.cryptolake.type      rest
 spark.sql.catalog.cryptolake.uri       http://iceberg-rest:8181
-spark.sql.catalog.cryptolake.io-impl   org.apache.iceberg.aws.s3.S3FileIO
+spark.sql.catalog.cryptolake.io-impl   org.apache.iceberg.hadoop.HadoopFileIO
 spark.sql.catalog.cryptolake.s3.endpoint     http://minio:9000
-spark.sql.catalog.cryptolake.warehouse       s3a://cryptolake-bronze/
+spark.sql.catalog.cryptolake.s3.path-style-access true
+spark.sql.catalog.cryptolake.s3.access-key-id minioadmin
+spark.sql.catalog.cryptolake.s3.secret-access-key minioadmin
+spark.sql.catalog.cryptolake.warehouse       s3://cryptolake-bronze/
 spark.hadoop.fs.s3a.endpoint           http://minio:9000
 spark.hadoop.fs.s3a.access.key         minioadmin
 spark.hadoop.fs.s3a.secret.key         minioadmin
