feat: Implement base data extractor and Fear & Greed Index ingestion, externalize environment configurations, and configure Spark for Iceberg with MinIO.

--- a/.env.example
+++ b/.env.example
@@ -3,17 +3,25 @@ BINANCE_API_KEY=your_api_key
 BINANCE_API_SECRET=your_api_secret
 
 # Kafka
-KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+KAFKA_BOOTSTRAP_SERVERS=kafka:29092
 KAFKA_TOPIC_FUTURES=binance_futures_realtime
 
 # MinIO (S3 Compatible)
 MINIO_ENDPOINT=http://minio:9000
+MINIO_ROOT_USER=minioadmin
+MINIO_ROOT_PASSWORD=minioadmin
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
-MINIO_BUCKET=warehouse
+MINIO_BUCKET_BRONZE=cryptolake-bronze
 
 # Spark
 SPARK_MASTER=spark://spark-master:7077
 
 # Airflow
 AIRFLOW_UID=50000
+AIRFLOW_FERNET_KEY=
+AIRFLOW_DB_USER=airflow
+AIRFLOW_DB_PASSWORD=airflow
+AIRFLOW_DB_NAME=airflow
+AIRFLOW_WWW_USER_USERNAME=admin
+AIRFLOW_WWW_USER_PASSWORD=admin
