--- a/docker/spark/spark-defaults.conf
+++ b/docker/spark/spark-defaults.conf
@@ -5,14 +5,14 @@ spark.sql.catalog.cryptolake           org.apache.iceberg.spark.SparkCatalog
 spark.sql.catalog.cryptolake.type      rest
 spark.sql.catalog.cryptolake.uri       http://iceberg-rest:8181
 spark.sql.catalog.cryptolake.io-impl   org.apache.iceberg.hadoop.HadoopFileIO
-spark.sql.catalog.cryptolake.s3.endpoint     http://minio:9000
+spark.sql.catalog.cryptolake.s3.endpoint     ${MINIO_ENDPOINT}
 spark.sql.catalog.cryptolake.s3.path-style-access true
-spark.sql.catalog.cryptolake.s3.access-key-id minioadmin
-spark.sql.catalog.cryptolake.s3.secret-access-key minioadmin
-spark.sql.catalog.cryptolake.warehouse       s3://cryptolake-bronze/
-spark.hadoop.fs.s3a.endpoint           http://minio:9000
-spark.hadoop.fs.s3a.access.key         minioadmin
-spark.hadoop.fs.s3a.secret.key         minioadmin
+spark.sql.catalog.cryptolake.s3.access-key-id ${MINIO_ACCESS_KEY}
+spark.sql.catalog.cryptolake.s3.secret-access-key ${MINIO_SECRET_KEY}
+spark.sql.catalog.cryptolake.warehouse       s3://${MINIO_BUCKET_BRONZE}/
+spark.hadoop.fs.s3a.endpoint           ${MINIO_ENDPOINT}
+spark.hadoop.fs.s3a.access.key         ${MINIO_ACCESS_KEY}
+spark.hadoop.fs.s3a.secret.key         ${MINIO_SECRET_KEY}
 spark.hadoop.fs.s3a.path.style.access  true
 spark.hadoop.fs.s3a.impl               org.apache.hadoop.fs.s3a.S3AFileSystem
 spark.hadoop.fs.s3a.connection.ssl.enabled false
