--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,11 @@ x-spark-common: &spark-common
     - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
     - SPARK_SSL_ENABLED=no
     # App Env
-    - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
-    - MINIO_ENDPOINT=http://minio:9000
-    - MINIO_ACCESS_KEY=minioadmin
-    - MINIO_SECRET_KEY=minioadmin
-    - MINIO_BUCKET_BRONZE=cryptolake-bronze
+    - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+    - MINIO_ENDPOINT=${MINIO_ENDPOINT}
+    - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
+    - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
+    - MINIO_BUCKET_BRONZE=${MINIO_BUCKET_BRONZE}
   volumes:
     - ./src:/opt/spark/work-dir/src
     - ./data:/opt/spark/data
@@ -25,8 +25,8 @@ x-airflow-common: &airflow-common
   build: ./docker/airflow
   environment:
     - AIRFLOW__CORE__EXECUTOR=LocalExecutor
-    - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
-    - AIRFLOW__CORE__FERNET_KEY=FB0e226543210987654321098765432109876543210=
+    - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://${AIRFLOW_DB_USER}:${AIRFLOW_DB_PASSWORD}@postgres/${AIRFLOW_DB_NAME}
+    - AIRFLOW__CORE__FERNET_KEY=${AIRFLOW_FERNET_KEY}
     - AIRFLOW__CORE__LOAD_EXAMPLES=False
     - AIRFLOW__WEBSERVER__EXPOSE_CONFIG=True
     - _AIRFLOW_DB_UPGRADE=true
@@ -46,8 +46,8 @@ services:
       - "9000:9000"
       - "9001:9001"
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
     command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
@@ -63,7 +63,7 @@ services:
       minio:
         condition: service_healthy
     entrypoint: >
-      /bin/sh -c " mc alias set minio http://minio:9000 minioadmin minioadmin; mc mb --ignore-existing minio/cryptolake-bronze; mc mb --ignore-existing minio/cryptolake-silver; mc mb --ignore-existing minio/cryptolake-gold; exit 0; "
+      /bin/sh -c " mc alias set minio ${MINIO_ENDPOINT} ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD}; mc mb --ignore-existing minio/${MINIO_BUCKET_BRONZE}; mc mb --ignore-existing minio/cryptolake-silver; mc mb --ignore-existing minio/cryptolake-gold; exit 0; "
 
   # --- Zookeeper ---
   zookeeper:
@@ -126,14 +126,14 @@ services:
       - CATALOG_WAREHOUSE=s3a://cryptolake-bronze/
       - CATALOG_IO__IMPL=org.apache.iceberg.aws.s3.S3FileIO
       - CATALOG_S3_ENDPOINT=http://minio:9000
-      - CATALOG_S3_ACCESS__KEY__ID=minioadmin
-      - CATALOG_S3_SECRET__ACCESS__KEY=minioadmin
+      - CATALOG_S3_ACCESS__KEY__ID=${MINIO_ACCESS_KEY}
+      - CATALOG_S3_SECRET__ACCESS__KEY=${MINIO_SECRET_KEY}
       - CATALOG_S3_PATH__STYLE__ACCESS=true
       - CATALOG_S3_PATH_STYLE_ACCESS=true
       - AWS_S3_PATH_STYLE_ACCESS=true
       - CATALOG_PROPERTIES=s3.path-style-access=true
-      - AWS_ACCESS_KEY_ID=minioadmin
-      - AWS_SECRET_ACCESS_KEY=minioadmin
+      - AWS_ACCESS_KEY_ID=${MINIO_ACCESS_KEY}
+      - AWS_SECRET_ACCESS_KEY=${MINIO_SECRET_KEY}
       - AWS_REGION=us-east-1
     depends_on:
       minio:
@@ -156,11 +156,11 @@ services:
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
       # App Env
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
-      - MINIO_ENDPOINT=http://minio:9000
-      - MINIO_ACCESS_KEY=minioadmin
-      - MINIO_SECRET_KEY=minioadmin
-      - MINIO_BUCKET_BRONZE=cryptolake-bronze
+      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+      - MINIO_ENDPOINT=${MINIO_ENDPOINT}
+      - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
+      - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
+      - MINIO_BUCKET_BRONZE=${MINIO_BUCKET_BRONZE}
     ports:
       - "8082:8080" # Changed to 8082 to avoid conflict with Kafka UI
       - "7077:7077"
@@ -184,9 +184,9 @@ services:
     image: postgres:13
     container_name: postgres
     environment:
-      - POSTGRES_USER=airflow
-      - POSTGRES_PASSWORD=airflow
-      - POSTGRES_DB=airflow
+      - POSTGRES_USER=${AIRFLOW_DB_USER}
+      - POSTGRES_PASSWORD=${AIRFLOW_DB_PASSWORD}
+      - POSTGRES_DB=${AIRFLOW_DB_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -225,8 +225,8 @@ services:
     environment:
       - _AIRFLOW_DB_UPGRADE=true
       - _AIRFLOW_WWW_USER_CREATE=true
-      - _AIRFLOW_WWW_USER_USERNAME=admin
-      - _AIRFLOW_WWW_USER_PASSWORD=admin
+      - _AIRFLOW_WWW_USER_USERNAME=${AIRFLOW_WWW_USER_USERNAME}
+      - _AIRFLOW_WWW_USER_PASSWORD=${AIRFLOW_WWW_USER_PASSWORD}
     depends_on:
       postgres:
         condition: service_healthy
