feat: Add logging configuration and settings management
- Introduced logging configuration in `src/config/logging.py`.
- Updated settings in `src/config/settings.py` to include new environment variables and structured settings.
- Created new contract models for futures trade events in `src/contracts/events.py`.
- Refactored ingestion logic in `src/ingestion` to utilize new settings and logging.
- Implemented streaming ingestion from Kafka to Iceberg in `src/processing/streaming/stream_to_bronze.py`.
- Added batch processing for bronze to silver transformation in `src/processing/batch/bronze_to_silver.py`.
- Created bootstrap script for Iceberg tables in `src/processing/bootstrap/bootstrap_iceberg.py`.
- Developed daily stats processing from silver to gold in `src/processing/gold/silver_to_gold_daily.py`.
- Added DBT project configuration and models for transformation in `src/transformation/dbt_cryptolake`.
- Implemented a Streamlit dashboard for visualizing OHLCV and daily stats in `src/ui/app.py`.
- Added unit tests for event parsing and producer serialization in `tests/test_events.py` and `tests/test_producer.py`.

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,30 @@
-# Binance API
-BINANCE_API_KEY=your_api_key
-BINANCE_API_SECRET=your_api_secret
+APP_ENV=dev
+LOG_LEVEL=INFO
 
-# Kafka
 KAFKA_BOOTSTRAP_SERVERS=kafka:29092
 KAFKA_TOPIC_FUTURES=binance_futures_realtime
+BINANCE_SYMBOLS=btcusdt,ethusdt,solusdt,bnbusdt
+BINANCE_WS_BASE_URL=wss://fstream.binance.com/stream
 
-# MinIO (S3 Compatible)
 MINIO_ENDPOINT=http://minio:9000
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_BUCKET_BRONZE=cryptolake-bronze
+MINIO_BUCKET_SILVER=cryptolake-silver
+MINIO_BUCKET_GOLD=cryptolake-gold
 
-# Spark
 SPARK_MASTER=spark://spark-master:7077
+ICEBERG_CATALOG_NAME=cryptolake
+ICEBERG_REST_URI=http://iceberg-rest:8181
+ICEBERG_NAMESPACE_BRONZE=bronze
+ICEBERG_NAMESPACE_SILVER=silver
+ICEBERG_NAMESPACE_GOLD=gold
 
-# Airflow
+API_HOST=0.0.0.0
+API_PORT=8000
+
 AIRFLOW_UID=50000
 AIRFLOW_FERNET_KEY=
 AIRFLOW_DB_USER=airflow
