chore: normalize topic env naming with legacy fallback

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ x-spark-common: &spark-common
     - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
     - SPARK_SSL_ENABLED=no
     - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
-    - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES}
+    - KAFKA_TOPIC_PRICES_REALTIME=${KAFKA_TOPIC_PRICES_REALTIME:-${KAFKA_TOPIC_FUTURES:-binance_futures_realtime}}
+    - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES:-${KAFKA_TOPIC_PRICES_REALTIME:-binance_futures_realtime}}
     - MINIO_ENDPOINT=${MINIO_ENDPOINT}
     - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
     - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
@@ -33,7 +34,8 @@ x-airflow-common: &airflow-common
     - AIRFLOW__WEBSERVER__EXPOSE_CONFIG=True
     - _AIRFLOW_DB_UPGRADE=true
     - SPARK_MASTER=${SPARK_MASTER}
-    - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES}
+    - KAFKA_TOPIC_PRICES_REALTIME=${KAFKA_TOPIC_PRICES_REALTIME:-${KAFKA_TOPIC_FUTURES:-binance_futures_realtime}}
+    - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES:-${KAFKA_TOPIC_PRICES_REALTIME:-binance_futures_realtime}}
   volumes:
     - ./src/orchestration/dags:/opt/airflow/dags
     - ./src:/opt/airflow/src
@@ -136,7 +138,8 @@ services:
     environment:
       - SPARK_MODE=master
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
-      - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES}
+      - KAFKA_TOPIC_PRICES_REALTIME=${KAFKA_TOPIC_PRICES_REALTIME:-${KAFKA_TOPIC_FUTURES:-binance_futures_realtime}}
+      - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES:-${KAFKA_TOPIC_PRICES_REALTIME:-binance_futures_realtime}}
       - MINIO_ENDPOINT=${MINIO_ENDPOINT}
       - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
       - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
@@ -164,7 +167,8 @@ services:
     command: python /opt/airflow/src/ingestion/streaming/binance_producer.py
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
-      - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES}
+      - KAFKA_TOPIC_PRICES_REALTIME=${KAFKA_TOPIC_PRICES_REALTIME:-${KAFKA_TOPIC_FUTURES:-binance_futures_realtime}}
+      - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES:-${KAFKA_TOPIC_PRICES_REALTIME:-binance_futures_realtime}}
       - BINANCE_SYMBOLS=${BINANCE_SYMBOLS}
       - LOG_LEVEL=${LOG_LEVEL}
     volumes:
