--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@ APP_ENV=dev
 LOG_LEVEL=INFO
 
 KAFKA_BOOTSTRAP_SERVERS=kafka:29092
-KAFKA_TOPIC_FUTURES=binance_futures_realtime
+KAFKA_TOPIC_PRICES_REALTIME=binance_futures_realtime
+# Legacy fallback (optional):
+# KAFKA_TOPIC_FUTURES=binance_futures_realtime
 BINANCE_SYMBOLS=btcusdt,ethusdt,solusdt,bnbusdt
 BINANCE_WS_BASE_URL=wss://fstream.binance.com/stream
 
