feat: harden binance websocket producer with backoff, buffer handling and tests

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ KAFKA_BOOTSTRAP_SERVERS=kafka:29092
 KAFKA_TOPIC_PRICES_REALTIME=binance_futures_realtime
 # Legacy fallback (optional):
 # KAFKA_TOPIC_FUTURES=binance_futures_realtime
+PRODUCER_RECONNECT_MAX_BACKOFF_SECONDS=60
 BINANCE_SYMBOLS=btcusdt,ethusdt,solusdt,bnbusdt
 BINANCE_WS_BASE_URL=wss://fstream.binance.com/stream
 
