--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -169,6 +169,7 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
       - KAFKA_TOPIC_PRICES_REALTIME=${KAFKA_TOPIC_PRICES_REALTIME:-${KAFKA_TOPIC_FUTURES:-binance_futures_realtime}}
       - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES:-${KAFKA_TOPIC_PRICES_REALTIME:-binance_futures_realtime}}
+      - PRODUCER_RECONNECT_MAX_BACKOFF_SECONDS=${PRODUCER_RECONNECT_MAX_BACKOFF_SECONDS:-60}
       - BINANCE_SYMBOLS=${BINANCE_SYMBOLS}
       - LOG_LEVEL=${LOG_LEVEL}
     volumes:
