--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,12 +118,13 @@ services:
     container_name: iceberg-rest
     ports: ["8181:8181"]
     environment:
-      - CATALOG_WAREHOUSE=s3a://${MINIO_BUCKET_BRONZE}/
+      - CATALOG_WAREHOUSE=s3://${MINIO_BUCKET_BRONZE}/warehouse
       - CATALOG_IO__IMPL=org.apache.iceberg.aws.s3.S3FileIO
       - CATALOG_S3_ENDPOINT=http://minio:9000
       - CATALOG_S3_ACCESS__KEY__ID=${MINIO_ACCESS_KEY}
       - CATALOG_S3_SECRET__ACCESS__KEY=${MINIO_SECRET_KEY}
       - CATALOG_S3_PATH_STYLE_ACCESS=true
+      - CATALOG_S3_PATH__STYLE__ACCESS=true
       - AWS_ACCESS_KEY_ID=${MINIO_ACCESS_KEY}
       - AWS_SECRET_ACCESS_KEY=${MINIO_SECRET_KEY}
       - AWS_REGION=us-east-1
