--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ x-spark-common: &spark-common
     - SPARK_RPC_ENCRYPTION_ENABLED=no
     - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
     - SPARK_SSL_ENABLED=no
+    - AWS_REGION=us-east-1
+    - AWS_DEFAULT_REGION=us-east-1
     - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
     - KAFKA_TOPIC_PRICES_REALTIME=${KAFKA_TOPIC_PRICES_REALTIME:-${KAFKA_TOPIC_FUTURES:-binance_futures_realtime}}
     - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES:-${KAFKA_TOPIC_PRICES_REALTIME:-binance_futures_realtime}}
@@ -138,6 +140,8 @@ services:
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master --ip spark-master --port 7077 --webui-port 8080
     environment:
       - SPARK_MODE=master
+      - AWS_REGION=us-east-1
+      - AWS_DEFAULT_REGION=us-east-1
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
       - KAFKA_TOPIC_PRICES_REALTIME=${KAFKA_TOPIC_PRICES_REALTIME:-${KAFKA_TOPIC_FUTURES:-binance_futures_realtime}}
       - KAFKA_TOPIC_FUTURES=${KAFKA_TOPIC_FUTURES:-${KAFKA_TOPIC_PRICES_REALTIME:-binance_futures_realtime}}
@@ -165,7 +169,8 @@ services:
   producer:
     build: ./docker/airflow
     container_name: producer
-    command: python /opt/airflow/src/ingestion/streaming/binance_producer.py
+    working_dir: /opt/airflow
+    command: python -m src.ingestion.streaming.binance_producer
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
       - KAFKA_TOPIC_PRICES_REALTIME=${KAFKA_TOPIC_PRICES_REALTIME:-${KAFKA_TOPIC_FUTURES:-binance_futures_realtime}}
