--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,19 +5,32 @@ on:
   pull_request:
 
 jobs:
-  lint-test:
+  test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
-      - name: Install deps
+          python-version: "3.11"
+
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e .
           pip install pytest ruff
-      - name: Lint
+
+      - name: Ruff
         run: ruff check src tests
-      - name: Tests
-        run: pytest -q
+
+      - name: Pytest
+        run: |
+          pytest -q \
+            tests/test_settings.py \
+            tests/test_events.py \
+            tests/test_producer.py \
+            tests/test_spark_schema.py \
+            tests/test_silver_quality.py
