--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,7 +139,7 @@ services:
       minio:
         condition: service_healthy
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8181/health" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:8181/v1/config" ]
       interval: 30s
       timeout: 10s
       retries: 5
