--- a/docker/spark/Dockerfile
+++ b/docker/spark/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y curl python3-pip && \
 # Download dependencies
 # Iceberg Spark Runtime, Hadoop AWS, AWS SDK
 RUN curl -o /opt/spark/jars/iceberg-spark-runtime-3.5_2.12-1.4.2.jar https://repo1.maven.org/maven2/org/apache/iceberg/iceberg-spark-runtime-3.5_2.12/1.4.2/iceberg-spark-runtime-3.5_2.12-1.4.2.jar && \
+    curl -o /opt/spark/jars/iceberg-aws-bundle-1.4.2.jar https://repo1.maven.org/maven2/org/apache/iceberg/iceberg-aws-bundle/1.4.2/iceberg-aws-bundle-1.4.2.jar && \
     curl -o /opt/spark/jars/hadoop-aws-3.3.4.jar https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar && \
     curl -o /opt/spark/jars/aws-java-sdk-bundle-1.12.262.jar https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.262/aws-java-sdk-bundle-1.12.262.jar && \
     curl -o /opt/spark/jars/spark-sql-kafka-0-10_2.12-3.5.0.jar https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.12/3.5.0/spark-sql-kafka-0-10_2.12-3.5.0.jar && \
@@ -19,6 +20,6 @@ RUN curl -o /opt/spark/jars/iceberg-spark-runtime-3.5_2.12-1.4.2.jar https://rep
 COPY spark-defaults.conf /opt/spark/conf/spark-defaults.conf
 
 # Python dependencies
-RUN pip3 install pyspark==3.5.0 pandas pyarrow
+RUN pip3 install pyspark==3.5.0 pandas pyarrow structlog pydantic-settings requests
 
 WORKDIR /opt/spark/work-dir
