--- a/docker/airflow/Dockerfile
+++ b/docker/airflow/Dockerfile
@@ -2,8 +2,17 @@ FROM apache/airflow:2.7.1-python3.11
 
 USER root
 RUN apt-get update && \
-    apt-get install -y gcc python3-dev openjdk-17-jdk-headless && \
+    apt-get install -y gcc python3-dev openjdk-17-jdk-headless curl ca-certificates && \
     apt-get clean
+
+# Airflow tasks use `docker exec` into `spark-master` for reproducible Spark runs.
+# Install a Docker CLI new enough for Docker Desktop's engine API version.
+ARG DOCKER_CLI_VERSION=28.0.1
+RUN curl -fsSL "https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_CLI_VERSION}.tgz" -o /tmp/docker.tgz && \
+    tar -xzf /tmp/docker.tgz -C /tmp && \
+    mv /tmp/docker/docker /usr/local/bin/docker && \
+    chmod +x /usr/local/bin/docker && \
+    rm -rf /tmp/docker /tmp/docker.tgz
 
 # Set JAVA_HOME
 ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
