--- a/docker/spark/spark-defaults.conf
+++ b/docker/spark/spark-defaults.conf
@@ -4,12 +4,12 @@ spark.sql.catalog.spark_catalog.type   hive
 spark.sql.catalog.cryptolake           org.apache.iceberg.spark.SparkCatalog
 spark.sql.catalog.cryptolake.type      rest
 spark.sql.catalog.cryptolake.uri       http://iceberg-rest:8181
-spark.sql.catalog.cryptolake.io-impl   org.apache.iceberg.hadoop.HadoopFileIO
+spark.sql.catalog.cryptolake.io-impl   org.apache.iceberg.aws.s3.S3FileIO
 spark.sql.catalog.cryptolake.s3.endpoint     ${MINIO_ENDPOINT}
 spark.sql.catalog.cryptolake.s3.path-style-access true
 spark.sql.catalog.cryptolake.s3.access-key-id ${MINIO_ACCESS_KEY}
 spark.sql.catalog.cryptolake.s3.secret-access-key ${MINIO_SECRET_KEY}
-spark.sql.catalog.cryptolake.warehouse       s3://${MINIO_BUCKET_BRONZE}/
+spark.sql.catalog.cryptolake.warehouse       s3://${MINIO_BUCKET_BRONZE}/warehouse
 spark.hadoop.fs.s3a.endpoint           ${MINIO_ENDPOINT}
 spark.hadoop.fs.s3a.access.key         ${MINIO_ACCESS_KEY}
 spark.hadoop.fs.s3a.secret.key         ${MINIO_SECRET_KEY}
